--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "version": "1.0.0",
   "main": "postcss.config.js",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
